--- a/history.html
+++ b/history.html
@@ -453,6 +453,8 @@
                 <li><a href="index.html">MISSION BRIEFING</a></li>
                 <li><a href="history.html" class="active">ORIGINS</a></li>
                 <li><a href="mission.html">AGARTHA OPERATION</a></li>
+                <li><a href="agartha-lore.html">AGARTHA LORE</a></li>
+                <li><a href="reactor-tech.html">REACTOR TECH</a></li>
             </ul>
         </div>
     </nav>
