--- a/mission.html
+++ b/mission.html
@@ -331,7 +331,7 @@
         
         .equipment-grid {
             display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+            grid-template-columns: repeat(3, 1fr);
             gap: 30px;
         }
         
@@ -572,6 +572,8 @@
                 <li><a href="index.html">MISSION BRIEFING</a></li>
                 <li><a href="history.html">ORIGINS</a></li>
                 <li><a href="mission.html" class="active">AGARTHA OPERATION</a></li>
+                <li><a href="agartha-lore.html">AGARTHA LORE</a></li>
+                <li><a href="reactor-tech.html">REACTOR TECH</a></li>
             </ul>
         </div>
     </nav>
